data/Java/10-missing-array-index/5/[M]Error.txt
*http://www.runoob.com/java/java-array.html
Program.java:21: error: incompatible types: double cannot be converted to double[]
            myList[k] = maxi;
                        ^